--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,21 +7,6 @@
     android:layout_height="match_parent">
 
 
-    <EditText
-        android:id="@+id/tagSearchBar"
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="60dp"
-        android:hint="@string/search_hint_home"
-        android:queryHint="Ex. family-friendly"
-        app:layout_constraintBottom_toTopOf="@+id/home_cats"
-        app:layout_constraintEnd_toEndOf="@id/layout"
-        app:layout_constraintHorizontal_bias="0.366"
-        app:layout_constraintStart_toStartOf="@id/layout"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.349" />
-
     <Button
         android:id="@+id/searchButton"
         android:layout_width="70dp"
@@ -30,12 +15,23 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
         android:text="[drw]"
-        app:layout_constraintBottom_toTopOf="@+id/home_cats"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.733"
         app:layout_constraintStart_toEndOf="@+id/tagSearchBar"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.361" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/tagSearchBar"
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="60dp"
+        android:hint="@string/search_hint_home"
+        android:queryHint="Ex. family-friendly"
+        app:layout_constraintEnd_toEndOf="@id/layout"
+        app:layout_constraintHorizontal_bias="0.366"
+        app:layout_constraintStart_toStartOf="@id/layout"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/locationSearchBar"
@@ -54,13 +50,13 @@
         android:layout_width="361dp"
         android:layout_height="99dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="16dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/home_intro"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.6"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tagSearchBar" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/home_itins"
@@ -72,22 +68,23 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/home_intro" />
 
     <TextView
         android:id="@+id/home_intro"
         android:layout_width="350dp"
         android:layout_height="48dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="36dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="16dp"
         android:fontFamily="@font/manjaribold"
         android:text="@string/home_intro"
         android:textColor="@color/colorGreenLight"
         android:textSize="@dimen/fun_text"
-        app:layout_constraintBottom_toTopOf="@+id/home_itins"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/home_cats" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
