--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -17,6 +17,7 @@
             android:layout_marginTop="40dp"
             android:fontFamily="@font/manjaribold"
             android:text="Itinerary Name"
+            android:textAlignment="center"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +45,7 @@
             android:background="@drawable/rounded_corner_input"
             android:ems="10"
             android:gravity="top"
-            android:hint="Gorgeous architecture. Ran into many ghosts, Harry, and pals. Had a fun time exploring the hidden passages."
+            android:hint="Ex. Gorgeous architecture. Ran into many ghosts, Harry, and pals. Had a fun time exploring the hidden passages."
             android:inputType="textMultiLine"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.267"
@@ -55,7 +56,7 @@
             android:id="@+id/textPhotos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="16dp"
             android:fontFamily="@font/manjaribold"
             android:text="Photos"
             android:textSize="20sp"
@@ -69,9 +70,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="52dp"
-            android:background="@drawable/rounded_corner_input"
+            android:background="@drawable/rounded_corner_add_photo"
             android:fontFamily="@font/manjaribold"
             android:text="Add new photo"
+            android:textAlignment="center"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -134,40 +136,43 @@
             android:id="@+id/addNewStop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="500dp"
-            android:layout_marginEnd="72dp"
+            android:layout_marginStart="76dp"
+            android:layout_marginTop="44dp"
+            android:layout_marginEnd="68dp"
+            android:background="@drawable/rounded_corner_button"
             android:text="Next Stop"
             android:textColor="#F6F6F6"
-            android:background="@drawable/rounded_corner_button"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toEndOf="@+id/viewPreviousStop"
+            app:layout_constraintTop_toBottomOf="@+id/photos" />
 
         <Button
             android:id="@+id/viewPreviousStop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="500dp"
+            android:layout_marginStart="68dp"
+            android:layout_marginTop="44dp"
+            android:background="@drawable/rounded_corner_button"
             android:text="Previous Stop"
             android:textColor="#F6F6F6"
-            android:background="@drawable/rounded_corner_button"
             app:layout_constraintEnd_toStartOf="@+id/addNewStop"
-            app:layout_constraintHorizontal_bias="0.472"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/photos" />
 
         <Button
             android:id="@+id/reviewItinerary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="600dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="32dp"
+            android:background="@drawable/rounded_corner_button"
             android:text="Review Itinerary"
             android:textColor="#F6F6F6"
-            android:background="@drawable/rounded_corner_button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/viewPreviousStop"
             app:layout_constraintVertical_bias="0.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
