--- a/app/src/main/res/layout/cat_card.xml
+++ b/app/src/main/res/layout/cat_card.xml
@@ -13,24 +13,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="5dip">
-<!--        <ImageView-->
-<!--            android:id="@+id/cover_img"-->
-<!--            android:layout_width="20dp"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:layout_alignParentStart="true"-->
-<!--            android:layout_alignParentTop="true"-->
-<!--            android:layout_alignParentEnd="true"-->
-<!--            android:layout_alignParentBottom="true"-->
-<!--            android:layout_marginStart="0dp"-->
-<!--            android:layout_marginTop="0dp"-->
-<!--            android:layout_marginEnd="0dp"-->
-<!--            android:layout_marginBottom="0dp"-->
-<!--            android:scaleX="1"-->
-<!--            android:scaleY="1"-->
-<!--            app:srcCompat="@android:drawable/star_big_on" />-->
-
+        android:orientation="vertical">
+        
         <!-- hard-coded category images in horizontal scroll -->
         <!-- pics are dynamically set in CatAdapter.java -->
         <ImageView
