--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -34,7 +34,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tagSearchBar"
             android:background="@drawable/search_button"
-            android:src="@drawable/ic_search"
+            android:src="@drawable/magnifyingglass"
             />
 
         <EditText
