--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,25 +11,21 @@
         android:id="@+id/searchButton"
         android:layout_width="70dp"
         android:layout_height="30dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintEnd_toEndOf="@id/home_intro"
-        app:layout_constraintHorizontal_bias="0.733"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/search_button"
         android:src="@drawable/magnifyingglass"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/tagSearchBar"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="60dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginRight="24dp"
         android:hint="@string/search_hint_home"
         android:queryHint="Ex. family-friendly"
-        app:layout_constraintStart_toStartOf="@id/home_intro"
         app:layout_constraintRight_toLeftOf="@id/searchButton"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -45,44 +41,23 @@
         app:layout_constraintTop_toTopOf="@id/layout"
         app:layout_constraintVertical_bias="0.16000003" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/home_cats"
-        android:layout_width="361dp"
-        android:layout_height="99dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="20dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tagSearchBar" />
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/home_child_nav_view"
+        android:layout_width="418dp"
+        android:layout_height="598dp"
+        android:layout_marginTop="44dp"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintRight_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tagSearchBar"
+        android:fitsSystemWindows="true">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/home_itins"
-        android:layout_width="350dp"
-        android:layout_height="350dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.476"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/home_intro" />
-
-    <TextView
-        android:id="@+id/home_intro"
-        android:layout_width="350dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="20dp"
-        android:fontFamily="@font/manjaribold"
-        android:text="@string/home_intro"
-        android:textColor="@color/colorGreenLight"
-        android:textSize="@dimen/fun_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.476"
-        app:layout_constraintStart_toStartOf="@+id/home_itins"
-        app:layout_constraintTop_toBottomOf="@+id/home_cats" />
+        <fragment
+            android:id="@+id/home_child_nav_host_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:navGraph="@navigation/home_child_navigation"
+            />
+    </com.google.android.material.navigation.NavigationView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
