--- a/app/src/main/res/navigation/home_child_navigation.xml
+++ b/app/src/main/res/navigation/home_child_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/home_child_navigation"
-    app:startDestination="@+id/displayMultItinsFragment">
+    app:startDestination="@id/splashFragment">
 
     <fragment
         android:id="@+id/displayMultItinsFragment"
@@ -15,4 +15,9 @@
         android:name="cs160.final_proj_drawer.ui.home.FilterFragment"
         android:label="fragment_filter"
         tools:layout="@layout/fragment_filter" />
+    <fragment
+        android:id="@+id/splashFragment"
+        android:name="cs160.final_proj_drawer.ui.home.SplashFragment"
+        android:label="fragment_splash"
+        tools:layout="@layout/fragment_splash" />
 </navigation>
