--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,11 +11,23 @@
         android:id="@+id/searchButton"
         android:layout_width="70dp"
         android:layout_height="30dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/search_button"
         android:src="@drawable/magnifyingglass"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/filterButton"
+        android:layout_width="70dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="96dp"
+        android:background="@drawable/search_button"
+        android:text="Filter"
+        android:textColor="@color/colorOffWhite"
+        app:layout_constraintStart_toEndOf="@id/tagSearchBar"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
@@ -31,15 +43,14 @@
 
     <EditText
         android:id="@+id/locationSearchBar"
-        android:layout_width="300dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
         android:hint="Current Location"
         android:queryHint="Current Location"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/layout"
-        app:layout_constraintLeft_toLeftOf="@+id/tagSearchBar"
-        app:layout_constraintTop_toTopOf="@id/layout"
-        app:layout_constraintVertical_bias="0.16000003" />
+        android:visibility="visible"
+        app:layout_constraintEnd_toStartOf="@+id/filterButton"
+        app:layout_constraintTop_toBottomOf="@+id/tagSearchBar" />
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/home_child_nav_view"
