--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="48dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/search_button"
-        android:src="@drawable/magnifyingglass"
+        android:src="@drawable/ic_search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -51,6 +51,21 @@
         android:visibility="visible"
         app:layout_constraintEnd_toStartOf="@+id/filterButton"
         app:layout_constraintTop_toBottomOf="@+id/tagSearchBar" />
+    <!--
+    this is the fun text :) for after you do a search
+    <TextView
+        android:id="@+id/search_intro"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="140dp"
+        android:fontFamily="@font/manjaribold"
+        android:text="Exploring Bangkok, Thailand"
+        android:textColor="@color/colorGreenDark"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+-->
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/home_child_nav_view"
