--- a/app/src/main/res/navigation/home_child_navigation.xml
+++ b/app/src/main/res/navigation/home_child_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/home_child_navigation"
-    app:startDestination="@id/filterFragment">
+    app:startDestination="@id/splashFragment">
 
     <fragment
         android:id="@+id/displayMultItinsFragment"
