--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,12 +9,7 @@
         android:id="@+id/nav_home"
         android:name="cs160.final_proj_drawer.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" >
-
-        <action
-            android:id="@+id/action_nav_home_to_itin"
-            app:destination="@id/fragment_display_itins" />
-    </fragment>
+        tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/nav_profile"
@@ -60,11 +55,7 @@
         android:id="@+id/fragment_display_itins"
         android:name="cs160.final_proj_drawer.ui.itin.DisplayMultItinsFragment"
         android:label="fragment_display_itins"
-        tools:layout="@layout/fragment_display_itins">
-        <action
-            android:id="@+id/action_itin_to_filter"
-            app:destination="@+id/fragment_filter" />
-    </fragment>
+        tools:layout="@layout/fragment_display_itins"/>
 
     <fragment
         android:id="@+id/fragment_filter"
