--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,7 +42,7 @@
         app:layout_constraintRight_toLeftOf="@id/searchButton"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
+    <SearchView
         android:id="@+id/locationSearchBar"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
