--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- please only use these colors in the app. -->
     <color name="colorPrimary">@color/colorGreen</color>
     <color name="colorPrimaryDark">@color/colorGreenDark</color>
     <color name="colorAccent">@color/colorTealLight</color>
     <color name="colorAccentDark">@color/colorTeal</color>
+
+
+    <color name="colorFunText">@color/colorGreenLight</color>
 
     <!-- these are the hex codes from the color pallets on figma -->
     <color name="colorGreenLight">#007973</color>
