--- a/app/src/main/res/layout/fragment_posted.xml
+++ b/app/src/main/res/layout/fragment_posted.xml
@@ -7,8 +7,8 @@
 
     <TextView
         android:id="@+id/saved_intro"
-        android:layout_width="350dp"
-        android:layout_height="48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/fun_text_box_height"
         android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="20dp"
@@ -16,5 +16,8 @@
         android:text="@string/posted_intro"
         android:textColor="@color/colorFunText"
         android:textSize="@dimen/fun_text"/>
+    <SearchView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
