--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,7 @@
 
     <!-- fun text sizes -->
     <dimen name="fun_text">24sp</dimen>
+    <dimen name="fun_text_box_height">30sp</dimen>
 
     <dimen name="roundCorners">9dp</dimen>
     <dimen name="catPaddingRight">9dp</dimen>
